--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   google_maps_flutter: ^2.1.9
   location: ^4.4.0
   flutter_rating_bar: ^4.0.1
+  auto_size_text: ^3.0.0
+  url_launcher: ^6.1.5
+  rxdart: ^0.27.5
       
 dev_dependencies:
   flutter_test:
@@ -64,7 +67,7 @@ flutter:
     - assets/images/restaurants/
     - assets/images/restaurants/photos/
     - assets/icons/
-    - assets/icons/2.0x/
+    # - assets/icons/2.0x/
     - assets/json/
     - .env
 
